bash now inits w fetch

--- a/home-manager/extras/config.jsonc
+++ b/home-manager/extras/config.jsonc
@@ -19,7 +19,7 @@
 		{
 			"type": "title",
 			"key": "  ⚘ user...................................",
-			"format": "{1}@{2}",
+			"format": "{1}@{2}"
 		},
 		{
 			"type": "os",
